ezyplot-x1/force-app/main/default/objects/Plot__c/Plot__c.object-meta.xml
<CustomObject>
    <label>Plot</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>