ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Address_paon__c.field-meta.xml
<CustomField>
    <fullName>Address_paon__c</fullName>
    <label>Address_paon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>