ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Address_postcode__c.field-meta.xml
<CustomField>
    <fullName>Address_postcode__c</fullName>
    <label>Address_postcode</label>
    <length>99</length>
    <type>Text</type>
</CustomField>