ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Address_saon__c.field-meta.xml
<CustomField>
    <fullName>Address_saon__c</fullName>
    <label>Address_saon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>