ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Address_street__c.field-meta.xml
<CustomField>
    <fullName>Address_street__c</fullName>
    <label>Address_street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>