ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Address_town__c.field-meta.xml
<CustomField>
    <fullName>Address_town__c</fullName>
    <label>Address_town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>