ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <inlineHelpText>Area to which this plot falls under. Can NOT be changed afterwards so do not complete if unsure.</inlineHelpText>
    <label>Area</label>
    <referenceTo>Area_retrieval_status__c</referenceTo>
    <relationshipLabel>Plots</relationshipLabel>
    <relationshipName>Plots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>