ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <inlineHelpText>Based on total floor area and UK National space standard</inlineHelpText>
    <label>Bedrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>