ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Construction_year__c.field-meta.xml
<CustomField>
    <fullName>Construction_year__c</fullName>
    <label>Construction year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>before 1900</fullName>
            </value>
            <value>
                <fullName>1900-1929</fullName>
            </value>
            <value>
                <fullName>1930-1949</fullName>
            </value>
            <value>
                <fullName>1950-1966</fullName>
            </value>
            <value>
                <fullName>1967-1975</fullName>
            </value>
            <value>
                <fullName>1976-1982</fullName>
            </value>
            <value>
                <fullName>1983-1990</fullName>
            </value>
            <value>
                <fullName>1991-1995</fullName>
            </value>
            <value>
                <fullName>1996-2002</fullName>
            </value>
            <value>
                <fullName>2003-2006</fullName>
            </value>
            <value>
                <fullName>2007-2011</fullName>
            </value>
            <value>
                <fullName>2012 onwards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>