ezyplot-x1/force-app/main/default/objects/Plot__c/fields/GBP_sqft__c.field-meta.xml
<CustomField>
    <fullName>GBP_sqft__c</fullName>
    <formula>Price_paid__c /  Total_floor_area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>£/sqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>