ezyplot-x1/force-app/main/default/objects/Plot__c/fields/New_build__c.field-meta.xml
<CustomField>
    <fullName>New_build__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New build</label>
    <type>Checkbox</type>
</CustomField>