ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>owner-occupied</fullName>
            </value>
            <value>
                <fullName>rental (private)</fullName>
            </value>
            <value>
                <fullName>rental (social)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>