ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Plot_size__c.field-meta.xml
<CustomField>
    <fullName>Plot_size__c</fullName>
    <label>Plot size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>