ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Price_paid__c.field-meta.xml
<CustomField>
    <fullName>Price_paid__c</fullName>
    <label>Price paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>