ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Price_paid_date__c.field-meta.xml
<CustomField>
    <fullName>Price_paid_date__c</fullName>
    <label>Price paid date</label>
    <type>Date</type>
</CustomField>