ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Property_type__c.field-meta.xml
<CustomField>
    <fullName>Property_type__c</fullName>
    <label>Property type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>