ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Total_floor_area__c.field-meta.xml
<CustomField>
    <fullName>Total_floor_area__c</fullName>
    <label>Total floor area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>