ezyplot-x1/force-app/main/default/objects/Plot__c/fields/Value_postc__c.field-meta.xml
<CustomField>
    <fullName>Value_postc__c</fullName>
    <formula>if( TEXT(Property_type__c) ==&apos;Flat-maisonette&apos;,Area__r.Flats_sold_psqft__c, Area__r.Non_flats_sold_psqft__c )
*  Total_floor_area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value (postc)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>