ezyplot-x1/force-app/main/default/objects/Plot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GBP_sqft__c</columns>
    <columns>Property_type__c</columns>
    <columns>Tenure__c</columns>
    <columns>Occupation__c</columns>
    <columns>Price_paid__c</columns>
    <columns>Total_floor_area__c</columns>
    <columns>Bedrooms__c</columns>
    <columns>Construction_year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>